Fixed top bar alignment

--- a/src/styles/HeaderBar.module.css
+++ b/src/styles/HeaderBar.module.css
@@ -23,7 +23,6 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  margin-right: 4rem;
 }
 
 .label__text {
@@ -43,12 +42,14 @@
   display: flex;
   justify-content: flex-start;
   align-items: center;
+  width: 140px;
 }
 
 .menu__container__right {
   display: flex;
   justify-content: flex-end;
   align-items: center;
+  width: 140px;
 }
 
 .icon__container {
